--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -38,8 +38,16 @@
     border: none;
     border-radius: 3px;
     cursor: pointer;
-    background-color: #3456F3;
     color: #fff;
+}
+
+.button_color_blue {
+    background-color: #3456F3;
+}
+
+.button_color_gray {
+    background-color: #E8E8E8;
+    color: #000000;
 }
 
 .App {
