--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -50,6 +50,27 @@
     color: #000000;
 }
 
+.article__header {
+    width: 95%;
+    border-bottom: 1px solid #000000;
+}
+
+.article__title {
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 27px;
+    letter-spacing: -0.04em;
+    color: #000000;
+    padding: 0;
+    margin: 0 0 23px 0;
+}
+
+.two-columns {
+    display: flex;
+    gap: 40px;
+    padding: 70px 0 110px 0;
+}
+
 .App {
   text-align: center;
 }
