--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,9 @@
-
 .header {
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-around;
     padding: 20px 0 20px 0;
     margin: 0;
 }
