--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
     background-color: #F8F8F8;
-    width: 95%;
-    padding: 0 70px 20px 70px;
+    width: 90%;
+    padding: 50px 70px 20px 70px;
 }
 
 .footer__title {
@@ -10,7 +10,7 @@
     font-size: 13px;
     line-height: 16px;
     color: #A0A0A0;
-    padding: 0 0 20px 0;
+    padding: 0 0 45px 0;
     margin: 0;
     text-align: center;
     border-bottom: 1px solid #E8E8E8;
@@ -22,6 +22,11 @@
     font-weight: 400;
     font-size: 13px;
     line-height: 16px;
+}
+
+.footer__year {
+    padding: 0;
+    margin: 0;
 }
 
 .footer__links {
