--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -1,11 +1,10 @@
 .about-me {
-    padding: 110px 70px;
+    padding: 110px 70px 100px 70px;
     display: flex;
     flex-direction: column;
 }
 
 .about-me__main {
-    width: 95%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
