--- a/src/components/Main/Promo/Promo.css
+++ b/src/components/Main/Promo/Promo.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    width: 1200px;
+    width: 100%;
     height: 493px;
     background-color: #F5F5F5;
     border-radius: 10px;
@@ -19,6 +19,7 @@
     font-weight: 400;
     font-size: 50px;
     line-height: 58px;
+    letter-spacing: -0.04em;
     text-align: center;
     padding: 0;
     margin: 0 0 151px 0;
