--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -40,13 +40,13 @@
     list-style: none;
     gap: 10px;
     padding: 0;
-    margin: 0 0 30px 0;
+    margin: 0;
 }
 
 .techs__button {
     width: 90px;
     height: 60px;
     border-radius: 10px;
-    
+
 }
 
