--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -50,6 +50,35 @@
     color: #000000;
 }
 
+.button_color_white {
+    width: 100px;
+    background-color: #FAFAFA;
+    color: #000000;
+    box-shadow: 0 3px 14px rgba(0, 0, 0, 0.08);
+    border-radius: 40px;
+    position: relative;
+    padding: 0 30px 0 0;
+    /*margin: 0 0 0 50px;*/
+}
+
+.button__icon {
+    position: absolute;
+    top: 3px;
+    right: 3px;
+    width: 26px;
+    height: 26px;
+    border-radius: 50%;
+    margin: 0;
+    border: none;
+    background-color: #F4F4F4;
+    background-image: url('../../images/button__icon.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    outline: none;
+    transition: opacity .5s;
+}
+
 .article__header {
     border-bottom: 1px solid #000000;
 }
