--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,17 +1,17 @@
 .header {
-    width: 100%;
+    width: 90%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
-    padding: 20px 0 20px 0;
+    justify-content: space-between;
+    padding: 20px 0 0 0;
     margin: 0;
 }
 
 .header__logo {
     width: 38px;
     height: 38px;
-    padding: 18px 721px 18px 70px;
+    padding: 18px 0;
     margin: 0;
     background-image: url('../../images/header__logo.svg');
     background-position: left center;
