--- a/src/components/Movies/MoviesCardList/MoviesCardList.css
+++ b/src/components/Movies/MoviesCardList/MoviesCardList.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 70px 0 110px 0;
+    padding: 80px 0 110px 0;
 }
 
 .moviescardlist {
@@ -26,4 +26,7 @@
     font-weight: 500;
     font-size: 12px;
     line-height: 15px;
+    cursor: pointer;
+    outline: none;
+    transition: opacity .5s;
 }
