--- a/src/components/Movies/SearchForm/SearchForm.css
+++ b/src/components/Movies/SearchForm/SearchForm.css
@@ -1,11 +1,12 @@
 .search {
     width: 100%;
     display: flex;
+    padding: 80px 0;
+    border-bottom: 1px solid rgb(170, 170, 170, .2);
 }
 
 .search__form {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -15,7 +16,11 @@
     padding: 0;
     margin: 0;
     position: relative;
+}
 
+.search__form_fieldset_type_switch {
+    padding: 0 0 0 41px;
+    display: flex;
 }
 
 .search__form_input {
@@ -45,4 +50,50 @@
     cursor: pointer;
     outline: none;
     transition: opacity .5s;
+}
+
+.search__form_label {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 18px;
+    padding: 0 14px 0 0;
+    margin: 0;
+}
+
+.search__form_switch {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 36px;
+    height: 20px;
+    display: inline-block;
+    position: relative;
+    border-radius: 20px;
+    overflow: hidden;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    background-color: #EBEBEB;
+    transition: background-color ease 0.3s;
+}
+
+.search__form_switch:before {
+    content: "";
+    display: block;
+    position: absolute;
+    z-index: 2;
+    width: 16px;
+    height: 16px;
+    background: #F5F5F5;
+    border: 1px solid #ffffff;
+    left: 1px;
+    top: 1px;
+    border-radius: 50%;
+    transition: background ease-in-out 0.3s;
+}
+
+.search__form_switch:checked:before {
+    background: #2BE080;
+    left: 15px;
 }
