--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -32,6 +32,7 @@
     box-sizing: border-box;
     width: 76px;
     height: 32px;
+    line-height: 32px;
     font-size: 12px;
     padding: 0;
     margin: 0;
@@ -39,6 +40,8 @@
     border-radius: 3px;
     cursor: pointer;
     color: #fff;
+    text-decoration: none;
+    text-align: center;
 }
 
 .button_color_blue {
@@ -59,7 +62,7 @@
     border-radius: 40px;
     position: relative;
     padding: 0 30px 0 0;
-    /*margin: 0 0 0 50px;*/
+    margin: 0 0 0 50px;
 }
 
 .button__icon {
