--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,8 @@
 .footer {
     background-color: #F8F8F8;
     width: 90%;
-    padding: 50px 70px 20px 70px;
+    padding: 50px 0 20px 0;
+    margin: 0 auto;
 }
 
 .footer__title {
