--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,5 +5,11 @@
     align-items: center;
     justify-content: space-between;
     padding: 20px 0 0 0;
-    margin: 0;
+    margin: 0 auto;
+}
+
+@media screen and (max-width: 1100px) {
+    .header {
+        width: 95%;
+    }
 }
