--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -1,7 +1,9 @@
 .about-me {
-    padding: 110px 70px 100px 70px;
+    width: 90%;
+    padding: 110px 0 100px 0;
     display: flex;
     flex-direction: column;
+    margin: 0 auto;
 }
 
 .about-me__main {
@@ -59,4 +61,41 @@
     background-size: auto;
     margin: 66px 0 0 0;
 }
+
+
+@media screen and (max-width: 1060px) {
+    .about-me__text-block {
+        width: 450px;
+    }
+}
+
+@media screen and (max-width: 950px) {
+    .about-me__title {
+        font-size: 40px;
+        line-height: 40px;
+        margin: 66px 0 16px 0;
+    }
+
+    .about-me__subtitle {
+        font-size: 12px;
+        line-height: 18px;
+        margin: 0 0 20px 0;
+    }
+
+    .about-me__text-block {
+        width: 364px;
+    }
+
+    .about-me__text {
+        font-size: 12px;
+        line-height: 18px;
+        margin: 0 0 87px 0;
+    }
+
+    .about-me__photo {
+        width: 255px;
+        height: 307px;
+    }
+}
+
 
