--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -1,7 +1,9 @@
 .portfolio {
-    padding: 0 70px 125px 70px;
+    width: 90%;
+    padding: 0 0 125px 0;
     display: flex;
     flex-direction: column;
+    margin: 0 auto;
 }
 
 .portfolio__title {
@@ -42,4 +44,18 @@
     margin: 0;
     padding: 0;
     content: url('../../../images/portfolio__arrow.svg');
+}
+
+@media screen and (max-width: 950px) {
+    .portfolio__title {
+
+        font-size: 14px;
+        line-height: 18px;
+        margin: 0 0 50px 0;
+    }
+
+    .portfolio__link {
+        font-size: 28px;
+        line-height: 50px;
+    }
 }
