--- a/src/components/Main/Promo/Promo.css
+++ b/src/components/Main/Promo/Promo.css
@@ -3,9 +3,10 @@
     flex-direction: column;
     justify-content: flex-end;
     width: 100%;
-    height: 493px;
     background-color: #F5F5F5;
     border-radius: 10px;
+    margin: 0 auto;
+    padding: 160px 0 0 0;
 }
 
 .promo__main {
@@ -37,4 +38,17 @@
     width: 96px;
     height: 36px;
     border-radius: 10px;
+}
+
+@media screen and (max-width: 950px) {
+    .promo {
+        padding: 350px 0 0 0;
+    }
+
+    .promo__title {
+        width: 680px;
+        font-size: 40px;
+        line-height: 52px;
+        margin: 0 0 314px 0;
+    }
 }
