--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -1,8 +1,10 @@
 .techs {
+    width: 90%;
     padding: 100px 70px;
     display: flex;
     flex-direction: column;
     background-color: #F5F5F5;
+    margin: 0 auto;
 }
 
 .techs__main {
@@ -48,5 +50,27 @@
     height: 60px;
     border-radius: 10px;
 
+}
+
+@media screen and (max-width: 1060px) {
+    .techs {
+        padding: 100px 50px;
+    }
+}
+
+@media screen and (max-width: 950px) {
+    .techs {
+        padding: 100px 30px;
+    }
+
+    .techs__title {
+        margin: 80px 0 22px 0;
+    }
+
+    .techs__subtitle {
+        font-size: 12px;
+        line-height: 18px;
+        margin: 0 0 83px 0;
+    }
 }
 
