--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -16,6 +16,10 @@
     gap: 20px;
 }
 
+.navigation__list_type_movies {
+    display: flex;
+}
+
 .navigation__link {
     padding: 0;
     margin: 0;
@@ -24,8 +28,36 @@
     font-size: 12px;
     font-weight: 500;
     text-decoration: none;
+    opacity: 1;
+    transition: opacity .3s;
+}
+
+.navigation__link:hover {
+    opacity: .7;
 }
 
 .navigation__link:nth-child(2) {
     padding: 0 50px 0 0;
 }
+
+.navigation__burger-button {
+    display: none;
+    width: 44px;
+    height: 44px;
+    border: none;
+    background-image: url('../../images/navigation__burger.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: transparent;
+}
+
+@media screen and (max-width: 768px) {
+    .navigation__list_type_movies {
+        display: none;
+    }
+
+    .navigation__burger-button {
+        display: block;
+    }
+}
+
