--- a/src/components/Movies/MoviesCardList/MoviesCardList.css
+++ b/src/components/Movies/MoviesCardList/MoviesCardList.css
@@ -1,8 +1,10 @@
 .movieslist {
+    width: 95%;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 80px 0 110px 0;
+    margin: 0 auto;
 }
 
 .moviescardlist {
@@ -29,4 +31,14 @@
     cursor: pointer;
     outline: none;
     transition: opacity .5s;
+}
+
+
+@media screen and (max-width: 1200px) {
+    .moviescardlist {
+        gap: 30px;
+        grid-auto-rows: 262px;
+        grid-template-columns: repeat(auto-fit, minmax(339px, 262px));
+    }
+
 }
