--- a/src/components/Movies/SearchForm/SearchForm.css
+++ b/src/components/Movies/SearchForm/SearchForm.css
@@ -1,14 +1,17 @@
 .search {
-    width: 100%;
+    width: 90%;
     display: flex;
+    justify-content: center;
     padding: 80px 0;
+    margin: 0 auto;
     border-bottom: 1px solid rgb(170, 170, 170, .2);
 }
 
 .search__form {
+    width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .search__form_fieldset {
@@ -18,13 +21,19 @@
     position: relative;
 }
 
+.search__form_fieldset_type_input {
+    width: 80%;
+}
+
 .search__form_fieldset_type_switch {
-    padding: 0 0 0 41px;
+    width: 20%;
+    padding: 0;
     display: flex;
+    justify-content: flex-end;
 }
 
 .search__form_input {
-    width: 932px;
+    width: 100%;
     height: 48px;
     box-sizing: border-box;
     opacity: 0.2;
@@ -97,3 +106,15 @@
     background: #2BE080;
     left: 15px;
 }
+
+
+@media screen and (max-width: 769px) {
+    .search__form {
+      flex-direction: column;
+    }
+
+    .search__form_fieldset_type_input {
+margin: 0 0 38px 0;
+    }
+}
+
