--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -97,3 +97,9 @@
     padding: 0;
     margin: 0;
 }
+
+@media screen and (max-width: 769px) {
+    .register {
+        margin: 232px 0 0 0;
+    }
+}
