refact: refact layout main

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -125,33 +125,17 @@
     padding: 70px 0 110px 0;
 }
 
-.App {
-  text-align: center;
+@media screen and (max-width: 760px) {
+    .article__title {
+        font-size: 18px;
+        line-height: 22px;
+    }
+
+    .two-columns {
+        flex-direction: column;
+        gap: 56px;
+        padding: 60px 0 60px 0;
+    }
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
