--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -41,3 +41,24 @@
 .footer__link {
     text-decoration: none;
 }
+
+@media screen and (max-width: 760px) {
+    .footer__title {
+        font-size: 12px;
+        line-height: 15px;
+    }
+
+    .footer__main {
+        flex-direction: column-reverse;
+        align-items: center;
+        font-size: 12px;
+        line-height: 15px;
+    }
+
+    .footer__links {
+        flex-direction: column;
+        align-items: center;
+        gap: 12px;
+        margin: 0 0 30px 0;
+    }
+}
