--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -98,4 +98,39 @@
     }
 }
 
+@media screen and (max-width: 760px) {
+    .about-me__title {
+        font-size: 30px;
+        line-height: 36px;
+        margin: 40px 0 20px 0;
+    }
+
+    .about-me__subtitle {
+        font-size: 11px;
+        line-height: 16px;
+    }
+
+    .about-me__text-block {
+        width: 292px;
+    }
+
+    .about-me__text {
+        font-size: 11px;
+        line-height: 16px;
+        margin: 0 0 40px 0;
+    }
+
+    .about-me__photo {
+        width: 292px;
+        height: 352px;
+        margin: 60px 0 0 0;
+
+    }
+
+    .about-me__main {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+}
+
 
