--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -48,7 +48,6 @@
 
 @media screen and (max-width: 950px) {
     .portfolio__title {
-
         font-size: 14px;
         line-height: 18px;
         margin: 0 0 50px 0;
@@ -57,5 +56,17 @@
     .portfolio__link {
         font-size: 28px;
         line-height: 50px;
+    }
+}
+
+@media screen and (max-width: 760px) {
+    .portfolio__title {
+        line-height: 20px;
+        margin: 0 0 40px 0;
+    }
+
+    .portfolio__link {
+        font-size: 18px;
+        line-height: 28px;
     }
 }
