--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -36,7 +36,6 @@
     margin: 0 0 100px 0;
 }
 
-
 .techs__navigation {
     display: flex;
     list-style: none;
@@ -74,3 +73,31 @@
     }
 }
 
+@media screen and (max-width: 760px) {
+    .techs {
+        padding: 100px 0;
+    }
+
+    .techs__title {
+        width: 292px;
+        font-size: 30px;
+        line-height: 36px;
+        margin: 60px 0 24px 0;
+    }
+
+    .techs__subtitle {
+        width: 292px;
+        font-size: 11px;
+        line-height: 16px;
+        margin: 0 0 50px 0;
+    }
+
+    .techs__navigation {
+        display: grid;
+        list-style: none;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+        padding: 0;
+        margin: 0;
+    }
+}
