--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,141 +1,139 @@
-@import '../../vendor/normalize.css';
-@import '../../vendor/fonts.css';
+@import url('../../vendor/normalize.css');
+@import url('../../vendor/fonts.css');
 
 .page {
-    width: 100%;
-    min-width: 320px;
-    padding: 0;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #FAFAFA;
-    color: #000000;
-    font-family: Inter, Arial, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  width: 100%;
+  min-width: 320px;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+  margin: 0 auto;
+  background-color: #fafafa;
+  color: #000;
+  font-family: Inter, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .content {
-    display: flex;
-    width: 100%;
-    max-width: 1280px;
-    min-height: 100vh;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
-    padding: 0;
-    margin: 0;
+  display: flex;
+  width: 100%;
+  max-width: 1280px;
+  min-height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  padding: 0;
+  margin: 0;
 }
 
 .button {
-    box-sizing: border-box;
-    width: 76px;
-    height: 32px;
-    line-height: 32px;
-    font-size: 12px;
-    padding: 0;
-    margin: 0;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-    color: #fff;
-    text-decoration: none;
-    text-align: center;
-    opacity: 1;
-    transition: opacity .3s;
+  width: 76px;
+  height: 32px;
+  box-sizing: border-box;
+  padding: 0;
+  border: none;
+  border-radius: 3px;
+  margin: 0;
+  color: #fff;
+  cursor: pointer;
+  font-size: 12px;
+  line-height: 32px;
+  opacity: 1;
+  text-align: center;
+  text-decoration: none;
+  transition: opacity .3s;
 }
 
 .button:hover {
-    opacity: .8;
+  opacity: .8;
 }
 
 .button_color_blue {
-    margin: 0 0 0 30px;
-    background-color: #3456F3;
+  margin: 0 0 0 30px;
+  background-color: #3456f3;
 }
 
 .button_color_gray {
-    background-color: #E8E8E8;
-    color: #000000;
+  background-color: #e8e8e8;
+  color: #000;
 }
 
 .button_color_white {
-    width: 100px;
-    background-color: #FAFAFA;
-    color: #000000;
-    box-shadow: 0 3px 14px rgba(0, 0, 0, 0.08);
-    border-radius: 40px;
-    position: relative;
-    padding: 0 30px 0 0;
-    margin: 0 0 0 50px;
+  position: relative;
+  width: 100px;
+  padding: 0 30px 0 0;
+  border-radius: 40px;
+  margin: 0 0 0 50px;
+  background-color: #fafafa;
+  box-shadow: 0 3px 14px rgb(0 0 0 / 8%);
+  color: #000;
 }
 
 .button_color_white_type_popup {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .button__icon {
-    position: absolute;
-    top: 3px;
-    right: 3px;
-    width: 26px;
-    height: 26px;
-    border-radius: 50%;
-    margin: 0;
-    border: none;
-    background-color: #F4F4F4;
-    background-image: url('../../images/button__icon.svg');
-    background-position: center;
-    background-repeat: no-repeat;
-    cursor: pointer;
-    outline: none;
-    transition: opacity .5s;
+  position: absolute;
+  top: 3px;
+  right: 3px;
+  width: 26px;
+  height: 26px;
+  border: none;
+  border-radius: 50%;
+  margin: 0;
+  background-color: #f4f4f4;
+  background-image: url('../../images/button__icon.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  outline: none;
+  transition: opacity .5s;
 }
 
 .logo {
-    width: 38px;
-    height: 38px;
-    padding: 18px 0;
-    margin: 0;
-    background-image: url('../../images/header__logo.svg');
-    background-position: left center;
-    background-repeat: no-repeat;
-    background-size: auto;
+  width: 38px;
+  height: 38px;
+  padding: 18px 0;
+  margin: 0;
+  background-image: url('../../images/header__logo.svg');
+  background-position: left center;
+  background-repeat: no-repeat;
+  background-size: auto;
 }
 
 .article__header {
-    border-bottom: 1px solid #000000;
+  border-bottom: 1px solid #000;
 }
 
 .article__title {
-    font-weight: 400;
-    font-size: 22px;
-    line-height: 27px;
-    letter-spacing: -0.04em;
-    color: #000000;
-    padding: 0;
-    margin: 0 0 23px 0;
+  padding: 0;
+  margin: 0 0 23px;
+  color: #000;
+  font-size: 22px;
+  font-weight: 400;
+  letter-spacing: -.04em;
+  line-height: 27px;
 }
 
 .two-columns {
-    display: flex;
-    gap: 40px;
-    padding: 70px 0 110px 0;
+  display: flex;
+  padding: 70px 0 110px;
+  gap: 40px;
 }
 
 @media screen and (max-width: 760px) {
-    .article__title {
-        font-size: 18px;
-        line-height: 22px;
-    }
+  .article__title {
+    font-size: 18px;
+    line-height: 22px;
+  }
 
-    .two-columns {
-        flex-direction: column;
-        gap: 56px;
-        padding: 60px 0 60px 0;
-    }
+  .two-columns {
+    flex-direction: column;
+    padding: 60px 0;
+    gap: 56px;
+  }
 }
-
-
