--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,64 +1,64 @@
 .footer {
-    background-color: #F8F8F8;
-    width: 90%;
-    padding: 50px 0 20px 0;
-    margin: 0 auto;
+  width: 90%;
+  padding: 50px 0 20px;
+  margin: 0 auto;
+  background-color: #f8f8f8;
 }
 
 .footer__title {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 16px;
-    color: #A0A0A0;
-    padding: 0 0 45px 0;
-    margin: 0;
-    text-align: center;
-    border-bottom: 1px solid #E8E8E8;
+  padding: 0 0 45px;
+  border-bottom: 1px solid #e8e8e8;
+  margin: 0;
+  color: #a0a0a0;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+  text-align: center;
 }
 
 .footer__main {
-    display: flex;
-    justify-content: space-between;
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 16px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 16px;
 }
 
 .footer__year {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .footer__links {
-    display: flex;
-    list-style: none;
-    gap: 20px;
-    padding: 0;
-    margin: 0;
+  display: flex;
+  padding: 0;
+  margin: 0;
+  gap: 20px;
+  list-style: none;
 }
 
 .footer__link {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 @media screen and (max-width: 760px) {
-    .footer__title {
-        font-size: 12px;
-        line-height: 15px;
-    }
+  .footer__title {
+    font-size: 12px;
+    line-height: 15px;
+  }
 
-    .footer__main {
-        flex-direction: column-reverse;
-        align-items: center;
-        font-size: 12px;
-        line-height: 15px;
-    }
+  .footer__main {
+    flex-direction: column-reverse;
+    align-items: center;
+    font-size: 12px;
+    line-height: 15px;
+  }
 
-    .footer__links {
-        flex-direction: column;
-        align-items: center;
-        gap: 12px;
-        margin: 0 0 30px 0;
-    }
+  .footer__links {
+    flex-direction: column;
+    align-items: center;
+    margin: 0 0 30px;
+    gap: 12px;
+  }
 }
