--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,15 +1,15 @@
 .header {
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 0 0 0;
-    margin: 0 auto;
+  display: flex;
+  width: 90%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 0 0;
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 1100px) {
-    .header {
-        width: 95%;
-    }
+  .header {
+    width: 95%;
+  }
 }
