--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -1,136 +1,132 @@
 .about-me {
-    width: 90%;
-    padding: 110px 0 100px 0;
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
+  display: flex;
+  width: 90%;
+  flex-direction: column;
+  padding: 110px 0 100px;
+  margin: 0 auto;
 }
 
 .about-me__main {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .about-me__text-block {
-    width: 600px;
+  width: 600px;
 }
 
 .about-me__title {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 50px;
-    line-height: 58px;
-    letter-spacing: -0.04em;
-    padding: 0;
-    margin: 66px 0 18px 0;
+  padding: 0;
+  margin: 66px 0 18px;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: -.04em;
+  line-height: 58px;
 }
 
 .about-me__subtitle {
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 20px;
-    letter-spacing: -0.04em;
-    padding: 0;
-    margin: 0 0 26px 0;
+  padding: 0;
+  margin: 0 0 26px;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: -.04em;
+  line-height: 20px;
 }
 
 .about-me__text {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 22px;
-    padding: 0;
-    margin: 0 0 100px 0;
+  padding: 0;
+  margin: 0 0 100px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
 }
 
 .about-me__link {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 17px;
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
+  padding: 0;
+  margin: 0;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 17px;
+  text-decoration: none;
 }
 
 .about-me__photo {
-    width: 270px;
-    height: 327px;
-    border-radius: 10px;
-    background-image: url('../../../images/about-me__photo.png');
-    background-repeat: no-repeat;
-    background-size: auto;
-    margin: 66px 0 0 0;
+  width: 270px;
+  height: 327px;
+  border-radius: 10px;
+  margin: 66px 0 0;
+  background-image: url('../../../images/about-me__photo.png');
+  background-repeat: no-repeat;
+  background-size: auto;
 }
 
-
 @media screen and (max-width: 1060px) {
-    .about-me__text-block {
-        width: 450px;
-    }
+  .about-me__text-block {
+    width: 450px;
+  }
 }
 
 @media screen and (max-width: 950px) {
-    .about-me__title {
-        font-size: 40px;
-        line-height: 40px;
-        margin: 66px 0 16px 0;
-    }
+  .about-me__title {
+    margin: 66px 0 16px;
+    font-size: 40px;
+    line-height: 40px;
+  }
 
-    .about-me__subtitle {
-        font-size: 12px;
-        line-height: 18px;
-        margin: 0 0 20px 0;
-    }
+  .about-me__subtitle {
+    margin: 0 0 20px;
+    font-size: 12px;
+    line-height: 18px;
+  }
 
-    .about-me__text-block {
-        width: 364px;
-    }
+  .about-me__text-block {
+    width: 364px;
+  }
 
-    .about-me__text {
-        font-size: 12px;
-        line-height: 18px;
-        margin: 0 0 87px 0;
-    }
+  .about-me__text {
+    margin: 0 0 87px;
+    font-size: 12px;
+    line-height: 18px;
+  }
 
-    .about-me__photo {
-        width: 255px;
-        height: 307px;
-    }
+  .about-me__photo {
+    width: 255px;
+    height: 307px;
+  }
 }
 
 @media screen and (max-width: 760px) {
-    .about-me__title {
-        font-size: 30px;
-        line-height: 36px;
-        margin: 40px 0 20px 0;
-    }
+  .about-me__title {
+    margin: 40px 0 20px;
+    font-size: 30px;
+    line-height: 36px;
+  }
 
-    .about-me__subtitle {
-        font-size: 11px;
-        line-height: 16px;
-    }
+  .about-me__subtitle {
+    font-size: 11px;
+    line-height: 16px;
+  }
 
-    .about-me__text-block {
-        width: 292px;
-    }
+  .about-me__text-block {
+    width: 292px;
+  }
 
-    .about-me__text {
-        font-size: 11px;
-        line-height: 16px;
-        margin: 0 0 40px 0;
-    }
+  .about-me__text {
+    margin: 0 0 40px;
+    font-size: 11px;
+    line-height: 16px;
+  }
 
-    .about-me__photo {
-        width: 292px;
-        height: 352px;
-        margin: 60px 0 0 0;
+  .about-me__photo {
+    width: 292px;
+    height: 352px;
+    margin: 60px 0 0;
+  }
 
-    }
-
-    .about-me__main {
-        display: flex;
-        flex-direction: column-reverse;
-    }
+  .about-me__main {
+    display: flex;
+    flex-direction: column-reverse;
+  }
 }
-
-
