--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -1,72 +1,72 @@
 .portfolio {
-    width: 90%;
-    padding: 0 0 125px 0;
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
+  display: flex;
+  width: 90%;
+  flex-direction: column;
+  padding: 0 0 125px;
+  margin: 0 auto;
 }
 
 .portfolio__title {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 20px;
-    color: #A0A0A0;
-    padding: 0;
-    margin: 0 0 30px 0;
+  padding: 0;
+  margin: 0 0 30px;
+  color: #a0a0a0;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
 }
 
 .portfolio__list {
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-    padding: 0;
-    margin: 0;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
 .portfolio__link {
-    display: block;
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 50px;
-    letter-spacing: -0.04em;
-    padding: 20px 0;
-    margin: 0;
-    text-decoration: none;
-    position: relative;
-    border-bottom: 1px solid #E8E8E8;
+  position: relative;
+  display: block;
+  padding: 20px 0;
+  border-bottom: 1px solid #e8e8e8;
+  margin: 0;
+  font-size: 30px;
+  font-weight: 400;
+  letter-spacing: -.04em;
+  line-height: 50px;
+  text-decoration: none;
 }
 
 .portfolio__link::after {
-    position: absolute;
-    right: 0;
-    top: 20px;
-    margin: 0;
-    padding: 0;
-    content: url('../../../images/portfolio__arrow.svg');
+  position: absolute;
+  top: 20px;
+  right: 0;
+  padding: 0;
+  margin: 0;
+  content: url('../../../images/portfolio__arrow.svg');
 }
 
 @media screen and (max-width: 950px) {
-    .portfolio__title {
-        font-size: 14px;
-        line-height: 18px;
-        margin: 0 0 50px 0;
-    }
+  .portfolio__title {
+    margin: 0 0 50px;
+    font-size: 14px;
+    line-height: 18px;
+  }
 
-    .portfolio__link {
-        font-size: 28px;
-        line-height: 50px;
-    }
+  .portfolio__link {
+    font-size: 28px;
+    line-height: 50px;
+  }
 }
 
 @media screen and (max-width: 760px) {
-    .portfolio__title {
-        line-height: 20px;
-        margin: 0 0 40px 0;
-    }
+  .portfolio__title {
+    margin: 0 0 40px;
+    line-height: 20px;
+  }
 
-    .portfolio__link {
-        font-size: 18px;
-        line-height: 28px;
-    }
+  .portfolio__link {
+    font-size: 18px;
+    line-height: 28px;
+  }
 }
