--- a/src/components/Movies/SearchForm/SearchForm.css
+++ b/src/components/Movies/SearchForm/SearchForm.css
@@ -1,120 +1,125 @@
 .search {
-    width: 90%;
-    display: flex;
-    justify-content: center;
-    padding: 80px 0;
-    margin: 0 auto;
-    border-bottom: 1px solid rgb(170, 170, 170, .2);
+  display: flex;
+  width: 90%;
+  justify-content: center;
+  padding: 80px 0;
+  border-bottom: 1px solid rgb(170 170 170 / 20%);
+  margin: 0 auto;
 }
 
 .search__form {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .search__form_fieldset {
-    border: none;
-    padding: 0;
-    margin: 0;
-    position: relative;
+  position: relative;
+  padding: 0;
+  border: none;
+  margin: 0;
 }
 
 .search__form_fieldset_type_input {
-    width: 80%;
+  width: 80%;
 }
 
 .search__form_fieldset_type_switch {
-    width: 20%;
-    padding: 0;
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  width: 20%;
+  justify-content: flex-end;
+  padding: 0;
 }
 
 .search__form_input {
-    width: 100%;
-    height: 48px;
-    box-sizing: border-box;
-    opacity: 0.2;
-    border: 1.5px solid #AAAAAA;
-    border-radius: 50px;
-    padding: 0;
-    margin: 0;
+  width: 100%;
+  height: 48px;
+  box-sizing: border-box;
+  padding: 0;
+  border: 1.5px solid #aaa;
+  border-radius: 50px;
+  margin: 0;
+  opacity: .2;
 }
 
 .search__form-button {
-    position: absolute;
-    top: 7px;
-    right: 7px;
-    width: 34px;
-    height: 34px;
-    border-radius: 50%;
-    margin: 0;
-    border: none;
-    background-color: #3456F3;
-    background-image: url('../../../images/search__form_button.svg');
-    background-position: center;
-    background-repeat: no-repeat;
-    cursor: pointer;
-    outline: none;
-    transition: opacity .5s;
+  position: absolute;
+  top: 7px;
+  right: 7px;
+  width: 34px;
+  height: 34px;
+  border: none;
+  border-radius: 50%;
+  margin: 0;
+  background-color: #3456f3;
+  background-image: url('../../../images/search__form_button.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  outline: none;
+  transition: opacity .5s;
 }
 
 .search__form_label {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 18px;
-    padding: 0 14px 0 0;
-    margin: 0;
+  padding: 0 14px 0 0;
+  margin: 0;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px;
 }
 
 .search__form_switch {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    width: 36px;
-    height: 20px;
-    display: inline-block;
-    position: relative;
-    border-radius: 20px;
-    overflow: hidden;
-    outline: none;
-    border: none;
-    cursor: pointer;
-    background-color: #EBEBEB;
-    transition: background-color ease 0.3s;
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  width: 36px;
+  height: 20px;
+  border: none;
+  border-radius: 20px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: #ebebeb;
+  cursor: pointer;
+  outline: none;
+  transition: background-color ease .3s;
 }
 
-.search__form_switch:before {
-    content: "";
-    display: block;
-    position: absolute;
-    z-index: 2;
-    width: 16px;
-    height: 16px;
-    background: #F5F5F5;
-    border: 1px solid #ffffff;
-    left: 1px;
-    top: 1px;
-    border-radius: 50%;
-    transition: background ease-in-out 0.3s;
+.search__form_switch::before {
+  position: absolute;
+  z-index: 2;
+  top: 1px;
+  left: 1px;
+  display: block;
+  width: 16px;
+  height: 16px;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  background: #f5f5f5;
+  content: '';
+  transition: background ease-in-out .3s;
 }
 
-.search__form_switch:checked:before {
-    background: #2BE080;
-    left: 15px;
+.search__form_switch:checked::before {
+  left: 15px;
+  background: #2be080;
 }
-
 
 @media screen and (max-width: 769px) {
-    .search__form {
-      flex-direction: column;
-    }
+  .search__form {
+    flex-direction: column;
+  }
 
-    .search__form_fieldset_type_input {
-margin: 0 0 38px 0;
-    }
+  .search__form_fieldset_type_input {
+    margin: 0 0 38px;
+  }
 }
 
+@media screen and (max-width: 650px) {
+  .search__form_fieldset_type_input {
+    width: 95%;
+    margin: 0 0 45px;
+  }
+}
