--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,80 +1,79 @@
 .navigation {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .navigation__list {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    gap: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
+  gap: 20px;
+  list-style: none;
 }
 
 .navigation__list_type_movies {
-    display: flex;
+  display: flex;
 }
 
 .navigation__list_type_popup {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 159px 0 621px 0;
-    gap: 28px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 159px 0 621px;
+  gap: 28px;
 }
 
 .navigation__link {
-    padding: 0;
-    margin: 0;
-    color: black;
-    cursor: pointer;
-    font-size: 12px;
-    font-weight: 500;
-    text-decoration: none;
-    opacity: 1;
-    transition: opacity .3s;
+  padding: 0;
+  margin: 0;
+  color: black;
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: 500;
+  opacity: 1;
+  text-decoration: none;
+  transition: opacity .3s;
 }
 
 .navigation__link_type_popup {
-    font-size: 18px;
-    line-height: 22px;
+  font-size: 18px;
+  line-height: 22px;
 }
 
 .navigation__link_type_popup:active {
-    border-bottom: 2px solid #000000;
+  border-bottom: 2px solid #000;
 }
 
 .navigation__link:hover {
-    opacity: .7;
+  opacity: .7;
 }
 
 .navigation__link:nth-child(2) {
-    padding: 0 50px 0 0;
+  padding: 0 50px 0 0;
 }
 
 .navigation__burger-button {
-    display: none;
-    width: 44px;
-    height: 44px;
-    border: none;
-    background-image: url('../../images/navigation__burger.svg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: transparent;
+  display: none;
+  width: 44px;
+  height: 44px;
+  border: none;
+  background-color: transparent;
+  background-image: url('../../images/navigation__burger.svg');
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 @media screen and (max-width: 769px) {
-    .navigation__list_type_movies {
-        display: none;
-    }
+  .navigation__list_type_movies {
+    display: none;
+  }
 
-    .navigation__burger-button {
-        display: block;
-    }
+  .navigation__burger-button {
+    display: block;
+  }
 }
-
