--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -1,42 +1,42 @@
 .notfound {
-    display: flex;
-    flex-direction: column;
-    padding: 0;
-    margin: 246px 0 0 0;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0;
+  margin: 246px 0 0;
 }
 
 .notfound__title {
-    font-weight: 400;
-    font-size: 140px;
-    line-height: 169px;
-    text-align: center;
-    padding: 0;
-    margin: 0 0 5px 0;
+  padding: 0;
+  margin: 0 0 5px;
+  font-size: 140px;
+  font-weight: 400;
+  line-height: 169px;
+  text-align: center;
 }
 
 .notfound__subtitle {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    padding: 0;
-    margin: 0 0 184px 0;
+  padding: 0;
+  margin: 0 0 184px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+  text-align: center;
 }
 
 .notfound__link {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-    color: #3456F3;
-    text-decoration: none;
-    text-align: center;
-    padding: 0;
-    margin: 0 0 60px 0;
+  padding: 0;
+  margin: 0 0 60px;
+  color: #3456f3;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  text-align: center;
+  text-decoration: none;
 }
 
 @media screen and (max-width: 769px) {
-    .notfound {
-        margin: 408px 0 0 0;
-    }
+  .notfound {
+    margin: 408px 0 0;
+  }
 }
