--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,119 +1,137 @@
 .profile {
-    display: flex;
-    flex-direction: column;
-    margin: 74px 0 0 0;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  margin: 74px 0 0;
 }
 
 .profile__form {
-    width: 410px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  width: 410px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 auto;
 }
 
 .profile__form_title {
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 29px;
-    text-align: center;
-    padding: 0;
-    margin: 0 0 120px 0;
+  padding: 0;
+  margin: 0 0 120px;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 29px;
+  text-align: center;
 }
 
 .profile__form_fieldset {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    border: none;
-    padding: 0;
-    margin: 0 0 220px 0;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  padding: 0;
+  border: none;
+  margin: 0 0 220px;
 }
 
 .profile__form_label {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 0 16px 0;
-    margin: 0;
-    border-bottom: 1px solid #E8E8E8;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 0 16px;
+  border-bottom: 1px solid #e8e8e8;
+  margin: 0;
 }
 
 .profile__form_label:last-child {
-    padding: 17px 0 0 0;
-    border-bottom: none;
+  padding: 17px 0 0;
+  border-bottom: none;
 }
 
 .profile__form_text {
-    margin: 0 30px 0 0;
-    font-weight: 500;
-    font-size: 11px;
-    line-height: 13px;
+  margin: 0 30px 0 0;
+  font-size: 11px;
+  font-weight: 500;
+  line-height: 13px;
 }
 
 .profile__form_input {
-    box-sizing: border-box;
-    background: transparent;
-    border: none;
-    padding: 0;
-    margin: 0;
-    font-weight: 400;
-    font-size: 11px;
-    line-height: 13px;
-    text-align: right;
+  box-sizing: border-box;
+  padding: 0;
+  border: none;
+  margin: 0;
+  background: transparent;
+  font-size: 11px;
+  font-weight: 400;
+  line-height: 13px;
+  text-align: right;
 }
 
 .profile__form_button {
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 16px;
-    border: none;
-    background: transparent;
-    cursor: pointer;
-    margin: 0 0 16px 0;
+  border: none;
+  margin: 0 0 16px;
+  background: transparent;
+  cursor: pointer;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 16px;
 }
 
 .profile__form_button_type_active {
-    width: 410px;
-    height: 45px;
-    color: white;
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 16px;
-    border: none;
-    border-radius: 3px;
-    background: #3456F3;
-    cursor: pointer;
-    margin: 0 0 16px 0;
+  width: 410px;
+  height: 45px;
+  border: none;
+  border-radius: 3px;
+  margin: 0 0 16px;
+  background: #3456f3;
+  color: white;
+  cursor: pointer;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 16px;
 }
 
 .profile__form_button_type_disabled {
-    background: #F8F8F8;
-    color: #C2C2C2;
+  background: #f8f8f8;
+  color: #c2c2c2;
 }
 
 .profile__form_link {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 13px;
-    padding: 0;
-    margin: 0;
-    line-height: 16px;
-    color: #EE3465;
-    text-decoration: none;
+  padding: 0;
+  margin: 0;
+  color: #ee3465;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  text-decoration: none;
 }
 
-
 @media screen and (max-width: 769px) {
-    .profile {
-        margin: 236px 0 0 0;
-    }
+  .profile {
+    margin: 236px 0 0;
+  }
 
-    .profile__form_title {
-        margin: 0 0 96px 0;
-    }
+  .profile__form_title {
+    margin: 0 0 96px;
+  }
 
-    .profile__form_fieldset {
-        margin: 0 0 210px 0;
-    }
+  .profile__form_fieldset {
+    margin: 0 0 210px;
+  }
+}
 
+@media screen and (max-width: 650px) {
+  .profile {
+    margin: 70px 0 0;
+  }
+
+  .profile__form {
+    width: 90%;
+  }
+
+  .profile__form_title {
+    margin: 0 0 96px;
+  }
+
+  .profile__form_fieldset {
+    margin: 0 0 210px;
+  }
 }
