--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -3,7 +3,6 @@
   width: 90%;
   flex-direction: column;
   padding: 100px 70px;
-  margin: 0 auto;
   background-color: #f5f5f5;
 }
 
@@ -74,6 +73,7 @@
 
 @media screen and (max-width: 760px) {
   .techs {
+    background-color: transparent;
     padding: 100px 0;
   }
 
