--- a/src/components/Movies/MoviesCardList/MoviesCardList.css
+++ b/src/components/Movies/MoviesCardList/MoviesCardList.css
@@ -3,7 +3,7 @@
   width: 95%;
   flex-direction: column;
   align-items: center;
-  padding: 80px 0 110px;
+  padding: 80px 0 110px 0;
   margin: 0 auto;
 }
 
@@ -19,7 +19,7 @@
   grid-template-columns: repeat(auto-fit, minmax(364px, 281px));
 }
 
-.moviescardlist__more-button {
+.movieslist__more-button {
   width: 320px;
   height: 36px;
   border: none;
@@ -36,7 +36,6 @@
 @media screen and (max-width: 1200px) {
   .moviescardlist {
     gap: 30px;
-    grid-auto-rows: 262px;
     grid-template-columns: repeat(auto-fit, minmax(339px, 262px));
   }
 }
@@ -44,13 +43,12 @@
 @media screen and (max-width: 650px) {
   .moviescardlist {
     width: 90%;
-    padding: 0 0 50px;
+    padding: 0 0 50px 0;
     gap: 14px;
-    grid-auto-rows: 237px;
     grid-template-columns: repeat(auto-fit, minmax(300px, 237px));
   }
 
-  .moviescardlist__more-button {
+  .movieslist__more-button {
     width: 240px;
     margin: 50px 0 0;
   }
