--- a/src/components/Movies/SearchForm/SearchForm.css
+++ b/src/components/Movies/SearchForm/SearchForm.css
@@ -14,25 +14,25 @@
   justify-content: space-between;
 }
 
-.search__form_fieldset {
+.search__form-fieldset {
   position: relative;
   padding: 0;
   border: none;
   margin: 0;
 }
 
-.search__form_fieldset_type_input {
+.search__form-fieldset_type_input {
   width: 80%;
 }
 
-.search__form_fieldset_type_switch {
+.search__form-fieldset_type_switch {
   display: flex;
   width: 20%;
   justify-content: flex-end;
   padding: 0;
 }
 
-.search__form_input {
+.search__form-input {
   width: 100%;
   height: 48px;
   box-sizing: border-box;
@@ -61,7 +61,7 @@
   transition: opacity .5s;
 }
 
-.search__form_label {
+.search__form-label {
   padding: 0 14px 0 0;
   margin: 0;
   font-size: 13px;
@@ -70,7 +70,7 @@
   line-height: 18px;
 }
 
-.search__form_switch {
+.search__form-switch {
   position: relative;
   display: inline-block;
   overflow: hidden;
@@ -87,7 +87,7 @@
   transition: background-color ease .3s;
 }
 
-.search__form_switch::before {
+.search__form-switch::before {
   position: absolute;
   z-index: 2;
   top: 1px;
@@ -102,7 +102,7 @@
   transition: background ease-in-out .3s;
 }
 
-.search__form_switch:checked::before {
+.search__form-switch:checked::before {
   left: 15px;
   background: #2be080;
 }
@@ -112,13 +112,13 @@
     flex-direction: column;
   }
 
-  .search__form_fieldset_type_input {
+  .search__form-fieldset_type_input {
     margin: 0 0 38px;
   }
 }
 
 @media screen and (max-width: 650px) {
-  .search__form_fieldset_type_input {
+  .search__form-fieldset_type_input {
     width: 95%;
     margin: 0 0 45px;
   }
