--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -5,6 +5,21 @@
   justify-content: space-between;
 }
 
+.navigation_type_popup {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  width: 520px;
+  height: 100vh;
+  box-sizing: border-box;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  background-color: #fff;
+  box-shadow: 0 0 25px rgb(0 0 0 / 15%);
+  color: #000;
+}
+
 .navigation__list {
   display: flex;
   flex-direction: row;
