refact: loading movies logic

--- a/src/components/Movies/MoviesCard/MoviesCard.css
+++ b/src/components/Movies/MoviesCard/MoviesCard.css
@@ -71,6 +71,11 @@
   transition: opacity .5s;
 }
 
+.moviescard__likebutton_type_trash {
+  background-image: url('../../../images/moviesCard__delete_icon.svg');
+
+}
+
 .moviescard__like-button:hover {
   opacity: .5;
 }
